--- a/resolver.html
+++ b/resolver.html
@@ -5,10 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Atendimentos-Infraestrutura</title>
     <link rel="icon" href="./imagem/logo.png">
+    <link rel="stylesheet" href="./css/main.css">
 </head>
-<body>
+<body class="bg-color">
     
-<header style="padding:12px;background:#0b5; color:#033; font-weight:700;">
+<header  style="padding:12px; color:#033; font-weight:700;">
     Painel de Atendimentos
 </header>
 
