--- a/resolver.html
+++ b/resolver.html
@@ -7,13 +7,13 @@
     <link rel="icon" href="./imagem/logo.png">
     <link rel="stylesheet" href="./css/main.css">
 </head>
-<body class="bg-color">
+<body class="bg-color" >
     
 <header  style="padding:12px; color:#033; font-weight:700;">
     Painel de Atendimentos
 </header>
 
-<nav style="display:flex;gap:8px;padding:12px;background:#f4f4f4;border-bottom:1px solid #ddd">
+<nav class="nav-resolver" style="display:flex;gap:8px;padding:12px;background:#f4f4f4;border-bottom:1px solid #ddd">
     <button class="tab" data-tab="para">Atendimentos para ser realizados <span class="count" id="count-para">0</span></button>
     <button class="tab" data-tab="realizado">Atendimentos realizados <span class="count" id="count-realizado">0</span></button>
     <button class="tab" data-tab="atrasado">Atendimentos atrasados <span class="count" id="count-atrasado">0</span></button>
